--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "version": "v0.1.1",
     "name": "fuzzyfox/shlink-cli",
-    "description": "An unofficial shlink cli rest client.",
+    "description": "An unofficial Shlink CLI REST client",
     "keywords": [
         "shlink",
         "rest",
@@ -24,16 +23,13 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
-        "guzzlehttp/guzzle": "^6.3.1",
-        "illuminate/http": "^7.0",
-        "laminas/laminas-text": "^2.7",
-        "laravel-zero/framework": "^7.0",
-        "ext-json": "*"
+        "php": "^8.1"
     },
     "require-dev": {
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^8.5"
+        "guzzlehttp/guzzle": "^7.4",
+        "illuminate/http": "^9.0",
+        "laminas/laminas-text": "^2.9",
+        "laravel-zero/framework": "^9.1.1"
     },
     "autoload": {
         "psr-4": {
@@ -50,14 +46,10 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
-    "scripts": {
-        "post-create-project-cmd": [
-            "@php application app:rename"
-        ]
-    },
+    "scripts": {},
     "minimum-stability": "dev",
     "prefer-stable": true,
     "bin": [
-        "shlink-cli"
+        "builds/shlink-cli"
     ]
 }
